<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity">

    <FrameLayout
        android:layout_centerInParent="true"
        android:paddingTop="42.5dip"
        android:layout_width="350dp"
        android:layout_height="500dp">
        <android.support.v7.widget.CardView
            android:id="@+id/forget"
            app:cardBackgroundColor="#2ea67f"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp">
                    <View
                        android:layout_alignParentStart="true"
                        android:layout_width="8dp"
                        android:layout_height="match_parent"
                        android:background="#2fa881"
                        />
                    <TextView
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:text="@string/reset_password"
                        android:textColor="#FFCC00"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:paddingStart="50dp"
                    android:paddingEnd="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:textColorHint="#f0f7f4"
                        android:layout_width="match_parent"
                        android:theme="@style/TextLabel"
                        android:layout_height="wrap_content">
                        <EditText
                            android:textSize="18sp"
                            android:hint="@string/phone_number"
                            android:textColor="#f0f7f4"
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:background="@drawable/selector_bg_edit_2"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:paddingBottom="2dp" />
                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:paddingStart="50dp"
                    android:paddingEnd="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:textColorHint="#f0f7f4"
                        android:layout_width="match_parent"
                        android:theme="@style/TextLabel"
                        android:layout_height="wrap_content">
                        <EditText
                            android:textSize="18sp"
                            android:hint="@string/code"
                            android:textColor="#f0f7f4"
                            android:id="@+id/et_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:background="@drawable/selector_bg_edit_2"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:paddingBottom="2dp" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btn_send"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="0dp"
                        android:background="@null"
                        android:button="@drawable/selector_bg_edit_2"
                        android:text="@string/send"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />
                </RelativeLayout>

                <LinearLayout
                    android:paddingStart="50dp"
                    android:paddingEnd="30dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                    <android.support.design.widget.TextInputLayout
                        android:textColorHint="#f0f7f4"
                        android:theme="@style/TextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:textSize="18sp"
                            android:hint="@string/password"
                            android:textColor="#f0f7f4"
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:background="@drawable/selector_bg_edit_2"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:paddingBottom="2dp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:paddingStart="50dp"
                    android:paddingEnd="30dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                    <android.support.design.widget.TextInputLayout
                        android:textColorHint="#f0f7f4"
                        android:theme="@style/TextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:textSize="18sp"
                            android:textColor="#f0f7f4"
                            android:hint="@string/repeat_password"
                            android:id="@+id/et_repeat_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:background="@drawable/selector_bg_edit_2"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:paddingBottom="2dp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <Button
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/bt_go"
                    android:background="@drawable/bt_shape_2"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/Next_F"
                    android:textColor="#2fa881" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="normal"
            android:src="@drawable/plus_x"
            android:transitionName="loginFab"
            android:layout_gravity="center_horizontal|top" />
    </FrameLayout>


</RelativeLayout>